fix cropped image output in background remover

--- a/Remoire/frontend/src/components/Dropdown/Dropdown.css
+++ b/Remoire/frontend/src/components/Dropdown/Dropdown.css
@@ -15,7 +15,7 @@ ul.dropdown-menu {
 
     padding: 0;
     background-color: var(--hex__background);
-    filter: drop-shadow(0 0 0.3rem var(--hex__drop-shadow));
+    filter: var(--filter__drop-shadow);
     border-radius: 1rem;
 }
 
